# gs_sensors

./: .gitignore  .gitmodules  README.md
config/camera_profiles/: realsense_d435.yaml
config/lidar_profiles/: crosslab_vlp16.yaml
gs_sensor_core/: pyproject.toml
gs_sensor_core/gs_sensor_core/: compression.py  culling.py  frames.py  lod.py  rotations.py  sh_utils.py
gs_sensor_core/gs_sensor_core/camera_profiles/: __init__.py  schema.py
gs_sensor_core/gs_sensor_core/lidar_profiles/: __init__.py  schema.py
gs_sensor_core/gs_sensor_core/models/: __init__.py  gaussian_model.py  lidar_checkpoint_loader.py  lidar_gaussian_model.py  paths.py  ply_loader.py
gs_sensor_core/gs_sensor_core/render/: __init__.py  camera.py  pipeline.py  rasterizer.py
gs_sensor_core/gs_sensor_core/render/lidar/: __init__.py  _kernel.py  camera.py  culling.py  pipeline.py  pointcloud.py  rasterizer.py  refine.py
gs_sensors_ros/: package.xml  setup.cfg  setup.py
gs_sensors_ros/gs_sensors_ros/: camera_debug_node.py  debug_view.py  lidar_debug_node.py  pose_source.py  ros_conversions.py
gs_sensors_ros/launch/: camera_debug.launch.py  lidar_debug.launch.py
scripts/: validate_lidar.py
